fixed text alignment

--- a/style.css
+++ b/style.css
@@ -143,6 +143,7 @@ body {
   font-size: 20px;
   width: 50vw;
   padding-top: 10px;
+  text-align: center;
 
 }
 
